Removed skills section background an updated border radius

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         <h2 class="skillTitle">Web Development</h2><br>
         <img src="images/imageicon.png" class="skillImage" alt="Web Development Icon"><br><br>
         <p>Lorem ipsum dolor sit amet consectetur. Penatibus egestas tristique facilisis sit blandit velit sed ullamcorper.</p>
-      </div></div>
+      </div>
+    </div>
 
     </section>
     <section class="projects">
